Add basic functionality

--- a/src/app/loan-application/loan.application.component.html
+++ b/src/app/loan-application/loan.application.component.html
@@ -8,41 +8,52 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Application ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Age</th>
         <th scope="col">Required Amount</th>
         <th scope="col">Status</th>
         <th scope="col">Requested Date</th>
-        <th *ngIf="canEdit">Actions</th>
+        <th >Actions</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let application of applications; index as i">
         <th scope="row">{{ i + 1 }}</th>
         <td>{{ application.id }}</td>
+        <td>{{ application.name }}</td>
+        <td>{{ application.age }}</td>
         <td>{{ application.requiredLoanAmount }}</td>
         <td>{{ application.isApproved == null ? 'Pending' : (application.isApproved ? 'Approved' : 'Rejected') }}</td>
         <td>{{ application.requestedDate | date: "MM-dd-yyyy" }}</td>
-        <td *ngIf="canEdit">
+        <td *ngIf="isApplicant">
           <button
             class="btn btn-primary"
-            (click)="editApplication(application.id)"
+            (click)="viewApplication(application.id)"
             style="margin: 5px;"
-            *ngIf="canEdit"
           >
-            Edit
+            View
           </button>
           <button
             class="btn btn-primary"
             (click)="deleteApplication(application.id)"
-            *ngIf="canEdit"
             style="margin: 5px;"
           >
             Delete
           </button>
         </td>
+        <td *ngIf="isReviewer">
+          <button
+            class="btn btn-primary"
+            (click)="reviewApplication(application.id)"
+            style="margin: 5px;"
+          >
+            Review
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
-  <div *ngIf="canEdit" style="margin-top: 5px;">
+  <div *ngIf="isApplicant" style="margin-top: 5px;">
     <button class="btn btn-primary" (click)="applyForLoan()">Apply for Loan</button>
   </div>
   <div class="row">
