--- a/src/app/loan-application/loan.application.component.html
+++ b/src/app/loan-application/loan.application.component.html
@@ -23,9 +23,9 @@
         <td>{{ application.name }}</td>
         <td>{{ application.age }}</td>
         <td>{{ application.requiredLoanAmount }}</td>
-        <td>{{ application.isApproved == null ? 'Pending' : (application.isApproved ? 'Approved' : 'Rejected') }}</td>
+        <td>{{ application.status == null ? 'Pending' : application.status}}</td>
         <td>{{ application.requestedDate | date: "MM-dd-yyyy" }}</td>
-        <td *ngIf="isApplicant">
+        <td>
           <button
             class="btn btn-primary"
             (click)="viewApplication(application.id)"
@@ -34,15 +34,15 @@
             View
           </button>
           <button
+            *ngIf="isApplicant"
             class="btn btn-primary"
             (click)="deleteApplication(application.id)"
             style="margin: 5px;"
           >
             Delete
           </button>
-        </td>
-        <td *ngIf="isReviewer">
           <button
+            *ngIf="isReviewer && application.status == 'Pending'"
             class="btn btn-primary"
             (click)="reviewApplication(application.id)"
             style="margin: 5px;"
