--- a/src/app/loan-application/view-loan-application.component.html
+++ b/src/app/loan-application/view-loan-application.component.html
@@ -32,7 +32,7 @@
         <textarea type="number" formControlName="reviewerComments" class="form-control" disabled></textarea>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" *ngIf="loanApplication.status == 'Pending'">
           Refresh Status
         </button>
         <a routerLink="/" class="btn btn-link">Back</a>
