Add Apply for loand and review functionalities

--- a/src/app/loan-application/loan.application.component.html
+++ b/src/app/loan-application/loan.application.component.html
@@ -34,7 +34,7 @@
             View
           </button>
           <button
-            *ngIf="isApplicant"
+            *ngIf="isApplicant && application.status != 'Approved'"
             class="btn btn-primary"
             (click)="deleteApplication(application.id)"
             style="margin: 5px;"
