--- a/src/app/loan-application/view-loan-application.component.html
+++ b/src/app/loan-application/view-loan-application.component.html
@@ -2,41 +2,39 @@
   <div class="col-sm-6 offset-sm-3">
     <alert></alert>
     <h2>{{ pageTitle }}</h2>
-    <form
-      *ngIf="loanApplicationFormGroup"
-      [formGroup]="loanApplicationFormGroup"
-      (ngSubmit)="onSubmit()"
-    >
+    <div *ngIf="loanApplication">
       <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" formControlName="name" class="form-control" disabled/>
+        <input type="text" value="{{loanApplication.name}}" class="form-control" disabled/>
       </div>
       <div class="form-group">
         <label for="age">Age</label>
-        <input type="number" formControlName="age" class="form-control" disabled/>
+        <input type="text" value="{{loanApplication.age}}" class="form-control" disabled/>
       </div>
       <div class="form-group">
         <label for="status">Application Status</label>
-        <input type="text" formControlName="status" class="form-control" disabled/>
+        <input type="text" value="{{loanApplication.status}}" class="form-control" disabled/>
       </div>
       <div class="form-group">
         <label for="requiredLoanAmount">Required Loan Amount</label>
-        <input type="number" formControlName="requiredLoanAmount" class="form-control" disabled/>
+        <input type="text" value="{{loanApplication.requiredLoanAmount}}" class="form-control" disabled/>
       </div>
       <div class="form-group" *ngIf="loanApplication.status == 'Approved'">
         <label for="approvedLoanAmount">Approved Loan Amount</label>
-        <input type="number" formControlName="approvedLoanAmount" class="form-control" disabled/>
+        <input type="text" value="{{loanApplication.approvedLoanAmount}}" class="form-control" disabled/>
       </div>
       <div class="form-group" *ngIf="loanApplication.status != 'Pending'">
         <label for="reviewerComments">Reviewer Comments</label>
-        <textarea type="number" formControlName="reviewerComments" class="form-control" disabled></textarea>
+        <input type="text" value="{{loanApplication.reviewerComments}}" class="form-control" disabled/>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" *ngIf="loanApplication.status == 'Pending'">
+        <button class="btn btn-primary" *ngIf="loanApplication.status == 'Pending'" (click)="refreshStatus()" style="margin: 5px;">
           Refresh Status
         </button>
-        <a routerLink="/" class="btn btn-link">Back</a>
+        <button class="btn btn-primary" (click)="onBack()" style="margin: 5px;">
+          Back
+        </button>
       </div>
-    </form>
+    </div>
   </div>
 </div>
